--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>maven</groupId>
   <artifactId>degala</artifactId>
-  <packaging>webxml</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>degala</name>
   <url>http://maven.apache.org</url>
